test renamed variables in docs to prevent scrolling
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -382,7 +382,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 |Values
 |Default
 
-|load_balancer_subnet_type
+|lb_subnet_type
 |The type of load balancer subnets to create. 
 
 Even if you set the load balancer subnets to be internal, you still need to set the correct {uri-oci-loadbalancer-annotations}[annotations] when creating internal load balancers. Just setting the subnet to be private is *_not_* sufficient.
@@ -393,7 +393,7 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 |preferred_lb_ads
 |The preferred Availability Domains where to provision the Load Balancers, specified in the form of a list of 2 elements.
-|:prewrap:
+|
 [source]
 ----
 preferred_lb_ads = ["ad1", "ad2"]
@@ -404,7 +404,7 @@ preferred_lb_ads = ["ad1", "ad2"]
 ["ad1", "ad2"]
 ----
 
-|preferred_load_balancer_subnets
+|preferred_lb_subnets
 |The preferred load balancer subnets that OKE will automatically choose when creating load balancers. If 'public' is chosen, the value for load_balancer_subnet_type must be either 'public' or 'both'. If 'private' is chosen, the value for load_balancer_subnet_type must be either 'internal' or 'both'.
 
 Even if you set the load balancer subnets to be internal, you still need to set the correct {uri-oci-loadbalancer-annotations}[annotations] when creating internal load balancers. Just setting the subnet to be private is *_not_* sufficient.
