added cross links
Signed-off-by: Ali Mukadam <ali.mukadam@oracle.com>

--- a/docs/configuration.adoc
+++ b/docs/configuration.adoc
@@ -2,16 +2,9 @@
 
 :idprefix:
 :idseparator: -
-ifndef::env-github[:icons: font]
-ifdef::env-github[]
-:status:
-:outfilesuffix: .adoc
-:caution-caption: :fire:
-:important-caption: :exclamation:
-:note-caption: :paperclip:
-:tip-caption: :bulb:
-:warning-caption: :warning:
-endif::[]
+:sectlinks:
+:sectnums:
+
 :uri-repo: https://github.com/hyder/terraform-oci-oke
 
 :uri-rel-file-base: link:{uri-repo}/blob/v12docs
@@ -51,7 +44,7 @@ endif::[]
 
 === Assumptions
 
-This section assumes you have completed all the {uri-prereqs}[pre-requisites]. 
+This section assumes you have completed all the {uri-prereqs}[pre-requisites].
 
 === Configure the variable file
 
@@ -78,7 +71,9 @@ e.g.
 api_fingerprint = "1a:bc:23:45:6d:78:e9:f0:gh:ij:kl:m1:23:no:4p:5q"
 ----
 
-You would have obtained your values when doing the {uri-prereqs}[pre-requisites].
+You would have obtained your values when doing the {uri-prereqs}[pre-requisites]. 
+
+{uri-terraform-options}#identity-and-access[Reference]
 
 === Configure ssh keys
 
@@ -89,6 +84,8 @@ ssh_private_key_path = "~/.ssh/id_rsa"
 
 ssh_public_key_path = "~/.ssh/id_rsa.pub"
 ----
+
+{uri-terraform-options}#ssh-keys[Reference]
 
 === Configure OCI parameters
 
@@ -106,7 +103,9 @@ region="us-phoenix-1"
 
 The list of regions can be found {uri-oci-region}[here].
 
-=== Configure networking parameters
+{uri-terraform-options}#general-oci[Reference]
+
+=== Configure OCI Networking parameters
 
 The networking parameters concern the VCN and the subnets network configuration as well as whether to enable some specific features such as the NAT or the Service Gateways. 
 
@@ -115,11 +114,15 @@ You can leave most of the default options. However, you may want to change the f
 . vcn_dns_name: this is the internal dns domain for resources created
 . vcn_name: this is the name of the vcn that will be appended to the label prefix
 
+{uri-terraform-options}#oci-networking[Reference]
+
 === Configure bastion host parameters
 
 The bastion host parameters concern whether you want to enable the bastion. 1 parameter to keep in mind here is the enable_instance_principal. Be aware that if this is enabled, it gives API access to the bastion host without authentication.
 
 Read more about {uri-oci-instance-principal}[instance_principal].
+
+{uri-terraform-options}#bastion-host[Reference]
 
 === Configure OKE parameters
 
@@ -132,6 +135,8 @@ The OKE parameters concern mainly the following:
 
 Refer to {uri-topology}[topology] for more thorough examples.
 
+{uri-terraform-options}#oke[Reference]
+
 === Configure OKE Load Balancer parameters
 
 The OKE Load Balancer parameters concern mainly the following:
@@ -143,6 +148,8 @@ CAUTION: Even if you set the load balancer subnets to be internal, you still nee
 
 Refer to {uri-topology}[topology] for more thorough examples.
 
+{uri-terraform-options}#oke-load-balancers[Reference]
+
 === Configure OCIR parameters
 
 The {uri-oci-ocir}[OCIR] parameters control the creation of an {uri-oci-authtoken}[Auth Token] for the user in OCI. The Auth Token is then subsequently used to create a Kubernetes secret, which can then be used as an imagePullSecrets in a deployment.
@@ -153,6 +160,8 @@ The secret is created in the kube-system namespace. To copy it to your namespace
 kubectl --namespace=kube-system get secret ocirsecret --export -o yaml | kubectl apply --namespace=<newnamespace> -f -
 ----
 
+{uri-terraform-options}#ocir[Reference]
+
 === Configure helm parameters
 
 The {uri-helm}[helm] parameters control the installation and the version of the helm client as well as optional helm repos to add and initialize on the bastion host. Additional helm repos include the following:
@@ -160,6 +169,10 @@ The {uri-helm}[helm] parameters control the installation and the version of the 
 . {uri-helm-incubator}[incubator]
 . {uri-helm-jetstack}[jetstack]
 
+{uri-terraform-options}#helm[Reference]
+
 === Configure Calico parameters
 
 The calico parameters control the installation of {uri-calico}[Calico] for {uri-calico-policy}[network policy].
+
+{uri-terraform-options}#calico[Reference]
