--- a/docs/prerequisites.adoc
+++ b/docs/prerequisites.adoc
@@ -2,16 +2,8 @@
 
 :idprefix:
 :idseparator: -
-ifndef::env-github[:icons: font]
-ifdef::env-github[]
-:status:
-:outfilesuffix: .adoc
-:caution-caption: :fire:
-:important-caption: :exclamation:
-:note-caption: :paperclip:
-:tip-caption: :bulb:
-:warning-caption: :warning:
-endif::[]
+:sectlinks:
+:sectnums:
 :uri-repo: https://github.com/hyder/terraform-oci-oke
 
 :uri-rel-file-base: link:{uri-repo}/blob/v12docs
@@ -31,17 +23,23 @@ endif::[]
 
 :uri-terraform: https://www.terraform.io
 :uri-terraform-download: https://www.terraform.io/downloads.html
-== Pre-requisites
 
 This section will guide you through the pre-requisites before you can use this project.
 
 You can proceed to {uri-instructions}[creating the cluster] if you have already done these.
 
-=== Install Terraform
+* link:#install-terraform[Install Terraform]
+* link:#generate-api-keys[Generate API Keys]
+* link:#upload-api-keys[Upload API Keys]
+* link:#create-an-oci-compartment[Create an OCI Compartment]
+* link:#obtain-the-necessary-ocids[Obtain the necessary OCIDs]
+* link:#configure-oci-policy-for-oke[Configure OCI Policy for OKE]
+
+== Install Terraform
 
 Start by installing Terraform and configuring your path.
 
-==== Download Terraform
+=== Download Terraform
 
 1. Open your browser and navigate to the {uri-terraform-download}[Terraform download page]. You need version 0.12.4+.
 
@@ -49,7 +47,7 @@ Start by installing Terraform and configuring your path.
 
 3. Extract the the contents of compressed file and copy the terraform binary to a location that is in your path (see next section below)
 
-==== Configure path on Linux/macOS
+=== Configure path on Linux/macOS
 
 1. Open a terminal and type the following:
 
@@ -59,7 +57,7 @@ Start by installing Terraform and configuring your path.
 $ sudo mv /path/to/terraform /usr/local/bin
 ----
 
-==== Configure path on Windows
+=== Configure path on Windows
 Follow the steps below to configure your path on Windows:
 
 . Click on 'Start', type 'Control Panel' and open it
@@ -69,7 +67,7 @@ Follow the steps below to configure your path on Windows:
 . Close all open windows by clicking OK
 . Open a new terminal and verify terraform has been properly installed
 
-==== Testing Terraform installation
+=== Testing Terraform installation
 
 1. Open a terminal and test:
 
@@ -80,21 +78,21 @@ terraform -v
 Terraform v0.12.4
 ----
 
-=== Generate api keys
+== Generate API keys
 
 Follow the documentation for generating keys on {uri-oci-keys}[OCI Documentation].
 
-=== Upload your api keys
+== Upload your API keys
 
 Follow the documentation for uploading your keys on {uri-oci-keys-upload}[OCI Documentation].
 
 Note the fingerprint.
 
-=== Create an OCI compartment
+== Create an OCI compartment
 
 Follow the documentation for {uri-oci-compartment}[creating a compartment].
 
-=== Obtain the necessary OCIDs
+== Obtain the necessary OCIDs
 
 The following OCIDs are required:
 
@@ -110,6 +108,6 @@ To obtain the compartment OCID:
 2. Click on your Compartment
 3. Locate OCID on the page and click on 'Copy'
 
-=== Configure OCI Policy for OKE
+== Configure OCI Policy for OKE
 
 Follow the documentation for {uri-oci-oke-policy}[to create the necessary OKE policy].
