--- a/docs/terraformoptions.adoc
+++ b/docs/terraformoptions.adoc
@@ -14,7 +14,8 @@
 :uri-helm: https://helm.sh/
 :uri-helm-incubator: https://kubernetes-charts-incubator.storage.googleapis.com/
 :uri-helm-jetstack: https://charts.jetstack.io
-
+:uri-kubernetes-hpa: https://kubernetes.io/docs/tasks/run-application/horizontal-pod-autoscale/
+:uri-metrics-server: https://github.com/kubernetes-incubator/metrics-server
 :uri-oci-images: https://docs.cloud.oracle.com/iaas/images/
 :uri-oci-loadbalancer-annotations: https://github.com/oracle/oci-cloud-controller-manager/blob/master/docs/load-balancer-annotations.md
 :uri-oci-region: https://docs.cloud.oracle.com/iaas/Content/General/Concepts/regions.htm
@@ -495,5 +496,20 @@ Refer to {uri-topology}[topology] for more thorough examples.
 
 |install_calico
 |Whether to install {uri-calico}[Calico] as {uri-calico-policy}[pod network policy].
+|true/false
+|false
+|===
+
+== Kubernetes Metrics Server
+
+[stripes=odd,cols="1e,4d,3a,3a", options=header,width="100%"] 
+|===
+|Parameter
+|Description
+|Values
+|Default
+
+|install_metricserver
+|Whether to install {uri-metrics-server}[Kubernetes Metrics Server]. *Required* for {uri-kubernetes-hpa}[Horizontal Pod Autoscaling].
 |true/false
 |false
