--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -35,13 +35,13 @@ signed the OCA can be accepted.
 
 === Pull request process
 
-1. Fork this repository
-1. Create a branch in your fork to implement the changes. We recommend using
+. Fork this repository
+. Create a branch in your fork to implement the changes. We recommend using
 the issue number as part of your branch name, e.g. `1234-fixes`
-1. Ensure that any documentation is updated with the changes that are required
+. Ensure that any documentation is updated with the changes that are required
 by your fix.
-1. Ensure that any samples are updated if the base image has been changed.
-1. Submit the pull request. *Do not leave the pull request blank*. Explain exactly
+. Ensure that any samples are updated if the base image has been changed.
+. Submit the pull request. *Do not leave the pull request blank*. Explain exactly
 what your changes are meant to do and provide simple steps on how to validate
 your changes. Ensure that you reference the issue you created as well.
 We will assign the pull request to 2-3 people for review before it is merged.
